--- a/CSS GRID/Actividad1/grid-gallery.css
+++ b/CSS GRID/Actividad1/grid-gallery.css
@@ -16,9 +16,8 @@
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: 200px 200px 200px;
+    grid-auto-rows: minmax(200px, auto);
     gap: 20px;
-    grid-auto-flow: dense;
 }
 
 @media (min-width: 600px) {
