--- a/CSS/Ejercicio Web Completa gato/Style.css
+++ b/CSS/Ejercicio Web Completa gato/Style.css
@@ -41,6 +41,12 @@ header .logo{
     transition: transform 0.25s ease;
 }
 
+header .lineas{
+    display: none;
+    background-color: var(--dark-blue);
+    border: none;
+}
+
 header input{
     background-color: var(--background-light);
     transition: transform 0.25s ease;
@@ -140,6 +146,19 @@ h1:hover{
     translate: 8px 4px ;
 }
 
-
+/*---- MEDIA QUERYS ----*/
+@media (max-width: 800px){
+    
+    header .lineas{
+        display: block;
+    }
+    header .menu {
+        display: none;
+    }
+    .footer-menu{
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
 
