--- a/CSS/Ejercicio Web Completa gato/Style.css
+++ b/CSS/Ejercicio Web Completa gato/Style.css
@@ -148,7 +148,9 @@ h1:hover{
 
 /*---- MEDIA QUERYS ----*/
 @media (max-width: 800px){
-    
+    header input{
+        display: none;
+    }
     header .lineas{
         display: block;
     }
